welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: value &&! is not a member of Boolean
    case (a,b) if !estEntre(10,20,a)&&!estEntre(10,20,b) => 0
                                    ^max1020:4: error: value &&! is not a member of Boolean
    case (a,b) if estEntre(10,20,a)&&!estEntre(10,20,b)=>a
                                   ^